Evaluate model performance

--- a/learn-TF.ipynb
+++ b/learn-TF.ipynb
@@ -444,7 +444,38 @@
    "cell_type": "markdown",
    "id": "caf1e476-8486-43a1-a130-6df9892ffb59",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Evaluate the performance of the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22f36916-9c28-4ea3-8ce2-fcbecd07021c",
+   "metadata": {},
+   "source": [
+    "The performance of the model can be evaluated on the test dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d601822e-9654-4a50-a8c0-46d8560d76c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m40/40\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step - accuracy: 0.9751 - loss: 0.0819\n",
+      "\n",
+      "Test accuracy: 97.97%.\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss, accuracy = model.evaluate(X_test, y_test, batch_size=256)\n",
+    "print(f\"\\nTest accuracy: {accuracy:.2%}.\")"
+   ]
   }
  ],
  "metadata": {
