--- a/learn-TF.ipynb
+++ b/learn-TF.ipynb
@@ -40,7 +40,7 @@
    "id": "c301adc0-1208-4914-8168-4326209281b6",
    "metadata": {},
    "source": [
-    "MNIST dataset contains hand-written digits from 0 t0 9. The training and test datasets have 60,000 and 10,000 images respectively, and they are classified based on the digit they represent. We shall use the Keras API to fetch the dataset."
+    "MNIST dataset contains hand-written digits from 0 to 9. The training and test datasets have 60,000 and 10,000 images respectively, and they are classified based on the digit they represent. We shall use the Keras API to fetch the dataset."
    ]
   },
   {
